Alterando maiúsculas para minúsculas

--- a/Curiosidades.html
+++ b/Curiosidades.html
@@ -18,8 +18,8 @@
         
       <nav>
            <a href="index.html">Home</a>
-           <a href="Obras.html">Obras</a>
-           <a href="Curiosidades.html">Curiosidades</a>
+           <a href="obras.html">Obras</a>
+           <a href="curiosidades.html">Curiosidades</a>
       </nav>
       <main>
           <h2>Curiosidades</h2>
