--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         
       <nav>
            <a href="index.html">Home</a>
-           <a href="Obras.html">Obras</a>
-           <a href="Curiosidades.html">Curiosidades</a>
+           <a href="obras.html">Obras</a>
+           <a href="curiosidades.html">Curiosidades</a>
       </nav>
       
           <Main>
